sql/sql_class.h     Bug #6284 - report truncation warnings in INSERT ... SELECT only for "INSERT" part sql/sql_insert.cc     Bug #6284 - report truncation warnings in INSERT ... SELECT only for "INSERT" part